<resources>
    <string name="app_name">ProyectoIntegrador1.2</string>
    <string name="frg_Principal">Principal</string>
    <string name="frg_Cultura">Cultura</string>
    <string name="frg_Deportes">Deportes</string>
    <string name="frg_Preguntas">Preguntas Frecuentes</string>
    <string name="frg_MiPerfil">Mi Perfil</string>
    <string name="frg_Admins">Administradores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Abrir Menú</string>
    <string name="drawer_close">Cerrar Menú</string>
    <string name="topimage">\@string</string>
    <string name="title_activity_edit_pregunta">EditPregunta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>